增加对内存马的支持